--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "express-mysql-session": "^2.1.6",
     "express-session": "^1.17.1",
     "express-validator": "^6.11.1",
+    "googleapis": "^76.0.0",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.6.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "timeago.js": "^4.0.2"
