--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-validator": "^6.11.1",
     "googleapis": "^76.0.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.3",
     "mysql": "^2.18.1",
     "nodemailer": "^6.6.1",
     "passport": "^0.4.1",
